fixing visuals being draw out of bounds in the playground app.

--- a/src/Clients/PowerBIVisualsPlayground/app.css
+++ b/src/Clients/PowerBIVisualsPlayground/app.css
@@ -125,7 +125,7 @@ div.chart-content {
 
 #container {
     height: 500px;
-    width: 1000px;
+    width: 800px;
     position: relative;
     top: 60px;
     left: 0;
